--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,6 +1,6 @@
 $deffault: #243f4d;
 $title: #191919;
-$price: #a3bbc8;
+$btn: #a3bbc8;
 $info: #436372;
 $link: #7b7b7b;
 
@@ -32,4 +32,12 @@ $link: #7b7b7b;
 %rubik-400{
   font-family: 'Rubik-Regular', sans-serif;
   font-weight: 400;
+}
+
+%btn{
+  font-size: 15px;
+  line-height: 12px;
+  color: #fff;
+  background-color: $btn;
+  text-align: center;
 }
