--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset';
+@import 'libs';
 @import 'global';
 
 .header{
@@ -90,6 +91,10 @@
     color: #fff;
     cursor: pointer;
   }
+
+  &__link{
+    line-height: 32px;
+  }
 }
 
 .footer-bottom{
@@ -113,6 +118,100 @@
     border-right: none;
   }
 }
+
+.top-slider{
+  &__inner{
+    padding-top: 200px;
+    background-color: #fcd7b6;
+    position: relative;
+  }
+
+  &__inner::after{
+    content: url('../images/top-slider-ellipse.png');
+    position: absolute;
+    top: 90px;
+    right: 200px;
+  }
+
+  &__content{
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    padding-left: 300px;
+  }
+
+  &__item{
+    display: flex !important;
+    justify-content: space-between;
+    padding-bottom: 195px;
+  }
+
+  &__title{
+    @extend %rubik-500;
+    font-size: 72px;
+    line-height: 70px;
+    max-width: 420px;
+    margin-bottom: 40px;
+    color: $deffault;
+  }
+
+  &__text{
+    font-size: 18px;
+    margin-bottom: 40px;
+    max-width: 370px;
+    color: $info;
+    @extend %rubik-400;
+  }
+
+  &__link{
+    @extend %rubik-500;
+    display: inline-block;
+    text-align: center;
+    padding: 20px 90px 20px 25px;
+    line-height: 12px;
+    background-color: $btn;
+    color: #fff;
+    position: relative;
+  }
+
+  &__link::after{
+    content: url('../images/icon/arrow-right.svg');
+    position: absolute;
+    left: 140px;
+  }
+
+  &__image{
+    padding-top: 70px;
+    padding-right: 300px;
+  }
+
+  .slick-dots{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 40px;
+    li{
+      button{
+        @extend %rubik-500;
+        border: none;
+        padding: 0;
+        background-color: #fde3cc;
+        width: 29px;
+        height: 29px;
+        border-radius: 50%;
+        font-size: 10px;
+        line-height: 9px;
+        margin-right: 10px;
+      }
+      &.slick-active{
+        button{
+          background-color: #fff;
+          color: $deffault;
+        }
+      }
+    }
+  }
+}
+
 
 
 
