added blog, added partners, fixed product and design product

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -3,6 +3,7 @@ $title: #191919;
 $btn: #a3bbc8;
 $info: #436372;
 $link: #7b7b7b;
+$blog: #262626;
 
 %dmsans-700{
   font-family: 'DMSans-Bold', sans-serif;
