adder login page

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -35,6 +35,11 @@ $blog: #262626;
   font-weight: 400;
 }
 
+%rubik-300{
+  font-family: 'Rubik-Light', sans-serif;
+  font-weight: 300;
+}
+
 %btn{
   font-size: 15px;
   line-height: 12px;
