--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -36,3 +36,33 @@ a{
   text-align: center;
   color: $title;
 }
+
+button{
+  cursor: pointer;
+}
+
+.breadcrumbs{
+  display: inline-flex;
+  &__item-link{
+    @extend %rubik-400;
+    font-size: 14px;
+    padding-right: 20px;
+    color: #979ba0;
+    position: relative;
+    &::after{
+      content: '/';
+      position: absolute;
+      right: 5px;
+      top: -6px;
+    }
+    &:last-child{
+      color: #888c91;
+      padding-right: 0;
+      &::after{
+        display: none;
+      }
+    }
+  }
+}
+
+
