--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -25,6 +25,16 @@ $blog: #262626;
   font-weight: 700;
 }
 
+%poppins-600{
+  font-family: 'Poppins-SemiBold', sans-serif;
+  font-weight: 600;
+}
+
+%rubik-700{
+  font-family: 'Rubik-Bold', sans-serif;
+  font-weight: 700;
+}
+
 %rubik-500{
   font-family: 'Rubik-Medium', sans-serif;
   font-weight: 500;
