--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -4,7 +4,7 @@ $btn: #a3bbc8;
 $info: #436372;
 $link: #7b7b7b;
 $blog: #262626;
-
+$contact: #565872;
 %checkbox-hidden{
   width: 1px;
   height: 1px;
