--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -58,6 +58,11 @@ $contact: #565872;
   font-weight: 300;
 }
 
+%nunito-700{
+  font-family: 'Nunito-Bold', sans-serif;
+  font-weight: 700;
+}
+
 %btn{
   font-size: 15px;
   line-height: 12px;
