--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1218,6 +1218,145 @@
   height: 335px;
 }
 
+.blog-page{
+  padding: 120px 0;
+  &__inner{
+    display: flex;
+  }
+  &__content{
+    margin-right: 70px;
+  }
+  &__item{
+    margin-bottom: 60px;
+    background-repeat: no-repeat;
+  }
+  &__img{
+    width: 830px;
+    height: 500px;
+    margin-bottom: 35px;
+    position: relative;
+  }
+  .blog-page__link-box{
+    padding: 20px 30px 20px 40px;
+    background-color: $btn;
+    max-width: 275px;
+    position: absolute;
+    bottom: -1px;
+  }
+  .blog__date,
+  .blog__author{
+    font-size: 11px;
+    color: #fff;
+  }
+  .blog__date{
+    margin-right: 0;
+  }
+  .blog__author{
+    padding-left: 50px;
+  }
+  .blog__date--calendar::before{
+    content: url('../images/icon/calendar.svg');
+    position: absolute;
+  }
+  // &__author--user::before{
+    
+  // }
+  &__title{
+    @extend %rubik-400;
+    font-size: 36px;
+    line-height: 26px;
+    color: #333;
+    margin-bottom: 25px;
+  }
+  &__text{
+    margin-bottom: 40px;
+    max-width: 800px;
+  }
+  &__link{
+    padding: 20px 85px 20px 25px;
+    border: 1px solid $btn;
+    font-size: 15px;
+    line-height: 12px;
+    color: $btn;
+    margin-bottom: 50px;
+    position: relative;
+    @extend %nunito-700;
+    &::after{
+      content: url('../images/icon/blog-page-arrow.svg');
+      position: absolute;
+      top: 25px;
+      right: 20px;
+    }
+  }
+  &__aside-form{
+    position: relative;
+  }
+  &__aside-input{
+    border: 2px solid #edf1f4;
+    border-radius: 5px;
+    width: 100%;
+    margin-bottom: 60px;
+    height: 43px;
+    outline: none;
+    padding-left: 10px;
+    padding-right: 45px;
+  }
+  &__aside-button{
+    position: absolute;
+    border-radius: 5px;
+    background-color: #edf1f4;
+    top: 0px;
+    right: -1px;
+    border: none;
+    width: 47px;
+    height: 43px;
+  }
+  &__aside-img{
+    margin: 0 auto;
+  }
+  .title__posts{
+    &::after{
+      bottom: 5px;
+      left: 150px;
+    }
+  }
+  &__aside-item{
+    margin-bottom: 25px;
+  }
+  &__aside-inner{
+    display: flex;
+  }
+  &__aside-box{
+    margin-left: 20px;
+  }
+  &__aside-title{
+    @extend %rubik-400;
+    width: 185px;
+    font-size: 14px;
+    line-height: 20px;
+    color: #333;
+    text-align: left;
+  }
+  &__aside-date{
+    padding-left: 20px;
+    font-size: 14px;
+    color: #9b9b9b;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
