--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -65,4 +65,35 @@ button{
   }
 }
 
+.pagination{
+  display: flex;
+  padding-top: 30px;
+  &__link{
+    font-size: 16px;
+    background-color: #fff;
+    border: 1px solid $btn;
+    margin-right: 15px;
+    color: $deffault;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__link--active{
+    background-color: $btn;
+    color: #fff;
+  }
+  &__link-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    width: 75px;
+    height: 50px;
+    color: $deffault;
+    background-color: #fff;
+    border: 1px solid $btn;
+  }
+}
 
