--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -399,6 +399,7 @@
     justify-content: space-between;
   }
   &__item{
+    position: relative;
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 6px 47px 3px rgba(37, 37, 37, 0.05);
@@ -407,6 +408,20 @@
   }
   &__img{
     margin-bottom: 35px;
+  }
+  &__news{
+    position: absolute;
+    bottom: 200px;
+    left: 30px;
+    padding: 5px 30px;
+    background-color: rgb(163, 187, 200);
+    display: inline-block;
+    border-radius: 15px;
+    font-size: 14px;
+    line-height: 20px;
+    color: #fff;
+    @extend %poppins-700;
+    text-transform: uppercase;
   }
   &__text-box{
     max-width: 315px;
@@ -504,6 +519,7 @@
     padding: 10px 17px;
     background-color: #a3bbc8;
     color: #fff;
+    margin-left: -5px;
   }
   &__link{
     line-height: 32px;
@@ -1005,7 +1021,7 @@
 .product__content{
   margin-left: 30px;
   max-width: 870px;
-  min-height: 1680px;
+  min-height: 1805px;
   &-box{
     margin-bottom: 110px;
   }
@@ -1250,13 +1266,16 @@
   }
   .blog__date{
     margin-right: 0;
+    padding-left: 20px;
   }
   .blog__author{
-    padding-left: 50px;
+    padding-left: 30px;
   }
   .blog__date--calendar::before{
-    content: url('../images/icon/calendar.svg');
+    content: url('../images/icon/calendar-date.svg');
     position: absolute;
+    bottom: 16px;
+    left: 35px;
   }
   // &__author--user::before{
     
@@ -1341,10 +1360,275 @@
     padding-left: 20px;
     font-size: 14px;
     color: #9b9b9b;
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      background-image: url('../images/icon/calendar.svg');
+      background-repeat: no-repeat;
+      top: 0;
+      left: -1px;
+    }
   }
 }
 
-
+.blog-details{
+  &__title{
+    @extend %rubik-400;
+    font-size: 36px;
+    line-height: 26px;
+    margin-bottom: 25px;
+    color: #333;
+  }
+  &__description{
+    @extend %rubik-500;
+    margin-bottom: 25px;
+    color: $deffault;
+  }
+  &__text{
+    margin-bottom: 35px;
+  }
+  blockquote{
+    padding: 20px 85px 25px 35px;
+    background-color: rgb(163, 187, 200, 0.2);
+    border-left: 7px solid $btn;
+    span{
+      display: block;
+      padding-left: 45px;
+      position: relative;
+      &::before{
+        content: '';
+        position: absolute;
+        background-image: url('../images/blog-details-line.svg');
+        width: 20px;
+        height: 4px;
+        top: 15px;
+        left: 5px;
+      }
+    }
+    margin-bottom: 45px;
+  }
+  &__box{
+    display: flex;
+    margin-bottom: 45px;
+  }
+  &__box-img{
+    width: 323px;
+    height: 210px;
+    margin-right: 30px;
+  }
+  &__box-title{
+    @extend %rubik-500;
+    font-size: 18px;
+    margin-bottom: 25px;
+  }
+  &__box-text{
+    color: $contact;
+  }
+  &__info{
+    margin-bottom: 60px;
+  }
+  &__info-title{
+    @extend %rubik-500;
+    font-size: 18px;
+    margin-bottom: 20px;
+    color: $deffault;
+  }
+  &__info-text{
+    color: $contact;
+  }
+  &__author{
+    margin-bottom: 65px;
+  }
+  &__author-inner{
+    display: flex;  
+    justify-content: space-between;
+    border-top: 2px solid #ebebeb;
+    border-bottom: 2px solid #ebebeb;
+    padding: 25px 20px 25px 0;
+  }
+  &__author-info{
+    display: flex;
+  }
+  &__author-img{
+    width: 76px;
+    height: 76px;
+    margin-right: 30px;
+  }
+  &__author-box{
+    padding-top: 15px;
+  }
+  &__author-name{
+    @extend %rubik-500;
+    font-size: 18px;
+    line-height: 25px;
+    color: #333;
+    margin-bottom: 5px;
+  }
+  &__author-position{
+    color: #666;
+  }
+  &__author-meta{
+    line-height: 26px;
+    color: #999;
+  }
+  &__author-tags{
+    margin-bottom: 5px;
+    span{
+      color: #333;
+      margin-right: 25px;
+    }
+    a{
+      font-size: 16px;
+      line-height: 30px;
+    }
+  }
+  &__author-share{
+    span{
+      color: #333;
+    }
+  }
+  &__author-link{
+    display: inline-block;
+    margin-left: 15px;
+    vertical-align: middle;
+  }
+  &__comments{
+    margin-bottom: 80px;
+  }
+  &__comments-title{
+    @extend %rubik-700;
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 55px;
+    text-align: left;
+    color: $info;
+  }
+  &__comments-item{
+    display: flex;
+    margin-bottom: 25px;
+  }
+  &__comments-item--decor{
+    max-width: 700px;
+    margin-left: auto;
+    padding: 25px 0;
+    border-top: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
+  }
+  &__comments-img{
+    width: 100px;
+    height: 100px;
+    margin-right: 30px;
+  }
+  &__comments-top{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+    line-height: 15px;
+  }
+  &__comments-name{
+    @extend %rubik-700;
+    color: $info;
+  }
+  &__comments-date{
+    font-size: 14px;
+    color: #9e9e9e;
+  }
+  &__comments-text{
+    color: $contact;
+    margin-bottom: 15px;
+  }
+  &__comments-link{
+    @extend %rubik-400;
+    font-size: 14px;
+    color: #526278;
+    padding-right: 20px;
+    position: relative;
+    &::after{
+      content: '';
+      position: absolute;
+      width: 22px;
+      height: 9px;
+      top: 5px;
+      left: 45px;
+      background-image: url('../images/arrow-right.svg');
+    }
+  }
+  &__form{
+    width: 100%;
+  }
+  &__form-title{
+    @extend %rubik-700;
+    font-size: 24px;
+    line-height: 30px;
+    margin-bottom: 40px;
+    color: $info;
+  }
+  &__form-input{
+    padding: 17px;
+    width: 400px;
+    height: 50px;
+    border: 1px solid #e5e5e5;
+    margin-bottom: 20px;
+    outline: none;
+    &::placeholder{
+      @extend %rubik-400;
+      font-size: 16px;
+      line-height: 36px;
+      color: #999;
+    }
+    &:hover:focus{
+      border-color: $btn;
+    }
+  }
+  .blog-details__form-input + .blog-details__form-input{
+    margin-left: 26px;
+  }
+  &__form-textarea{
+    width: 830px;
+    height: 120px;
+    border: 1px solid #e5e5e5;
+    resize: none;
+    padding: 15px;
+    margin-bottom: 40px;
+    outline: none;
+    &::placeholder{
+      @extend %rubik-400;
+      font-size: 16px;
+      line-height: 36px;
+      color: #999;
+    }
+    &:hover:focus{
+      border-color: $btn;
+    }
+  }
+  &__form-button{
+    padding: 15px 42px;
+    font-size: 14px;
+    line-height: 21px;
+    color: #fff;
+    border: none;
+    background-color: $btn;
+    text-transform: uppercase;
+  }
+  &__form-input--user,
+  &__form-input--email{
+    background-image: url('../images/blog/blog-user.svg');
+    background-repeat: no-repeat;
+    background-position: center right 20px;
+    padding-right: 40px;
+  }
+  &__form-input--email{
+    background-image: url('../images/blog/blog-email.svg');
+  }
+  &__form-input--message{
+    background-image: url('../images/blog/blog-message.svg');
+    background-repeat: no-repeat;
+    background-position: top 20px right 20px;
+  }
+}
 
 
 
